--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "12.18.3"
+  },
   "scripts": {
-    "build": "node ace build --production",
-    "start": "node server.js",
-    "dev": "node ace serve --watch",
-    "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "build": "node ace build --prod",
+    "start": "node ace serve --watch",
+    "start:prod": "node ./build/server.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.2",
@@ -29,10 +30,12 @@
     "@adonisjs/repl": "^3.1.4",
     "cloudinary": "^1.26.2",
     "luxon": "^1.27.0",
+    "mysql": "^2.18.1",
     "phc-argon2": "^1.1.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "url-parse": "^1.5.3"
   }
 }
