--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "node ace build --prod",
-    "start": "node ace serve --watch",
-    "start:prod": "node ./build/server.js"
+    "build": "node ace build --production",
+    "start": "node server.js",
+    "dev": "node ace serve --watch",
+    "lint": "eslint . --ext=.ts",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.2",
