--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/ace": "^11.0.4",
     "@adonisjs/auth": "^5.1.1",
     "@adonisjs/core": "^5.1.8",
     "@adonisjs/lucid": "^10.0.0",
